# agentic_workflows

./: .env.example  .gitignore  README.md  callback_server.py  main.py  pyproject.toml
agents/: base_agent.py
agents/managers/: base_manager.py  manager_config.py
connections/google/: google_oauth_client.py
connections/oauth2/: base_oauth_client.py
modules/ai_modules/: speech_to_text.py
modules/ai_modules/models/: deepseek.py
modules/app_actions/discord/: executive_director_bot.py
modules/triggers/: base_trigger.py  schedule.py
workflows/: base_workflow.py
workflows/my_workflows/: add_to_calendar.py  entrypoint.py  test_workflow.py
