[project]
name = "agentic-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "openai-whisper>=20240930",
    "openai>=1.59.9",
    "pydantic-ai>=0.0.19",
    "python-dotenv>=1.0.1",
    "schedule>=1.2.2",
]
